<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/downarrow"
    android:layout_gravity="right"
    android:background="@drawable/lastspeackerb"
    android:gravity="right"
    app:layout_anchorGravity="right">

    <!-- Player Header -->

    <!-- Song Thumbnail Image -->
    <LinearLayout
        android:id="@+id/lldown"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/downarrow"
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="0.21"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:foregroundGravity="left"
            android:scaleType="centerInside"
            android:src="@mipmap/downarrow" />

        <TextView
            android:id="@+id/songTitle"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="The Good, The Bad And The Ugly"
            android:textAlignment="center"
            android:freezesText="true"
            android:textColor="@color/colorAccent"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>


    <!-- Player Footer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_above="@+id/linearLayout"
        android:foregroundGravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/lldown">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentTop="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@+id/downarrow"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="false"
            android:layout_centerVertical="false"
            android:layout_toEndOf="@+id/downarrow"
            android:layout_toRightOf="@+id/downarrow"
            android:foregroundGravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/vinil" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <!-- Previous Button -->
        <ImageButton
            android:id="@+id/btnPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/btn_previous" />
        <!-- Backward Button -->
        <ImageButton
            android:id="@+id/btnBackward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/btn_backward" />
        <!-- Play Button -->
        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:background="@null"
            android:elevation="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/btn_pause" />
        <!-- Forward Button -->
        <ImageButton
            android:id="@+id/btnForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/btn_forward" />
        <!-- Next Button -->
        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/btn_next" />
    </LinearLayout>

    <!-- Progress Bar/Seek bar -->
    <SeekBar
        android:id="@+id/songProgressBar"
        style="@android:style/Widget.Material.SeekBar.Discrete"
        android:layout_width="fill_parent"
        android:layout_height="13dp"
        android:layout_above="@id/controls"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="false"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:foregroundGravity="top"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:progressDrawable="@drawable/seekbar_progress"
        android:thumb="@drawable/seek_handler" />

    <!-- Timer Display -->
    <LinearLayout
        android:id="@+id/timerDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/songProgressBar"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <!-- Current Duration Label -->
        <TextView
            android:id="@+id/songCurrentDurationLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="#eeeeee"
            android:textStyle="bold" />
        <!-- Total Duration Label -->
        <TextView
            android:id="@+id/songTotalDurationLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Repeat / Shuffle buttons -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/timerDisplay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center">
        <!-- Repeat Button -->
        <ImageButton
            android:id="@+id/btnRepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:src="@mipmap/repeat" />

        <!-- Shuffle Button -->
        <ImageButton
            android:id="@+id/btnShuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:src="@mipmap/shuffle" />
    </LinearLayout>

</RelativeLayout>