<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.qmul.nminoiu.tunein.RealTimeActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">
...
            layout="@layout/content_settings"
            android:visibility="invisible" />
    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>
<RelativeLayout
    android:layout_width="wrap_content"
...
        app:showAsAction="always"

        />


    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="-30dp"
        android:layout_marginTop="55dp"
...
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="16sp"
            android:textStyle="bold" />


        <ListView
            android:id="@+id/slistView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/stextView"
            android:layout_below="@+id/toolbar"
            android:layout_gravity="bottom"
            android:layout_marginBottom="1dip"
...
            android:scrollbars="none"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:animateLayoutChanges="true"
        android:background="#333333"
        android:clickable="true"
...
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="13sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <Button
            android:id="@+id/button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:background="@android:drawable/ic_media_pause"
            android:foregroundGravity="center_vertical"
...
